--- a/css/theme-options/plex.css
+++ b/css/theme-options/plex.css
@@ -4,9 +4,9 @@
    */
    --main-bg-color: url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/blur-noise.png") repeat scroll 0% 0%, radial-gradient(circle at 0% 100%, rgba(54, 66, 84, 0.55) 0%, rgba(54, 66, 84, 0.043) 70%, rgba(54, 66, 84, 0) 80%), radial-gradient(circle at 100% 100%, rgba(113, 135, 153, 0.55) 0%, rgba(113, 135, 153, 0.043) 70%, rgba(113, 135, 153, 0) 80%), radial-gradient(circle at 100% 0%, rgba(54, 66, 84, 0.55) 0%, rgba(54, 66, 84, 0.043) 70%, rgba(54, 66, 84, 0) 80%), radial-gradient(circle at 0% 0%, rgba(91, 114, 135, 0.55) 0%, rgba(91, 114, 135, 0.043) 70%, rgba(91, 114, 135, 0) 80%), rgb(0, 0, 0) center center/cover no-repeat fixed;
 
-   --modal-bg-color: #1f2326;
-   --modal-header-color: #1f2326;
-   --modal-footer-color: #323232;
+   --modal-bg-color: #4ABFAF;
+   --modal-header-color: #08635E;
+   --modal-footer-color: #80DDD4;
 
    --drop-down-menu-bg: #191a1c;
 
