--- a/css/theme-options/plex.css
+++ b/css/theme-options/plex.css
@@ -17,7 +17,7 @@
 
    --accent-color: 229, 160, 13;
    --accent-color-hover: #ffc107;
-   --link-color: #e5a00d;
+   --link-color: #C3E3F0;
    --link-color-hover: #fff;
    --label-text-color: #fff;
 
