--- a/css/theme-options/plex.css
+++ b/css/theme-options/plex.css
@@ -2,18 +2,18 @@
    /* --main-bg-color: url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/blur-noise.png"), url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/preset-light2.png") center center/cover no-repeat fixed;
      --modal-bg-color: url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/blur-noise.png"), url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/preset-dark2.png") center center/cover no-repeat fixed;
    */
-   --main-bg-color: url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/blur-noise.png") repeat scroll 0% 0%, radial-gradient(circle at 0% 100%, rgba(54, 66, 84, 0.55) 0%, rgba(54, 66, 84, 0.043) 70%, rgba(54, 66, 84, 0) 80%), radial-gradient(circle at 100% 100%, rgba(113, 135, 153, 0.55) 0%, rgba(113, 135, 153, 0.043) 70%, rgba(113, 135, 153, 0) 80%), radial-gradient(circle at 100% 0%, rgba(54, 66, 84, 0.55) 0%, rgba(54, 66, 84, 0.043) 70%, rgba(54, 66, 84, 0) 80%), radial-gradient(circle at 0% 0%, rgba(91, 114, 135, 0.55) 0%, rgba(91, 114, 135, 0.043) 70%, rgba(91, 114, 135, 0) 80%), rgb(0, 0, 0) center center/cover no-repeat fixed;
+   --main-bg-color: url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/blur-noise.png") repeat scroll 0% 0%, radial-gradient(circle, rgba(0,149,200,1) 0%, rgba(41,170,226,1) 44%, rgba(195,226,239,1) 100%), rgb(0, 0, 0) center center/cover no-repeat fixed;
 
-   --modal-bg-color: #4ABFAF;
-   --modal-header-color: #08635E;
-   --modal-footer-color: #80DDD4;
+   --modal-bg-color: #4ABFAF; /* PES Body Color */
+   --modal-header-color: #08635E; /* PES Fin Color */
+   --modal-footer-color: #80DDD4; /* PES Window Color */
 
-   --drop-down-menu-bg: #191a1c;
+   --drop-down-menu-bg: #80DDD4; /* PES Fin-Logo-Ship Color */
 
-   --button-color: #cc7b19;
+   --button-color: #EFE7CC; /* PES Gasket Color */
    --button-color-hover: #e59029;
-   --button-text: #eee;
-   --button-text-hover: #fff;
+   --button-text: #333333; /* PES Bolt Color */
+   --button-text-hover: #333333; /* PES Bolt Color */
 
    --accent-color: 229, 160, 13;
    --accent-color-hover: #ffc107;
@@ -21,8 +21,8 @@
    --link-color-hover: #fff;
    --label-text-color: #fff;
 
-   --text:#ddd;
-   --text-hover: #fff;
+   --text:#333333; /* PES Bolt Color */
+   --text-hover: #333333; /* PES Bolt Color */
    --text-muted: #999;
 
     /*Specials*/
