--- a/css/theme-options/plex.css
+++ b/css/theme-options/plex.css
@@ -2,7 +2,7 @@
    /* --main-bg-color: url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/blur-noise.png"), url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/preset-light2.png") center center/cover no-repeat fixed;
      --modal-bg-color: url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/blur-noise.png"), url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/preset-dark2.png") center center/cover no-repeat fixed;
    */
-   --main-bg-color: url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/blur-noise.png") repeat scroll 0% 0%, radial-gradient(circle, rgba(0,149,200,1) 0%, rgba(41,170,226,1) 44%, rgba(195,226,239,1) 100%), rgb(0, 0, 0) center center/cover no-repeat fixed;
+   --main-bg-color: url("https://raw.githubusercontent.com/gilbN/theme.park/master/resources/blur-noise.png") repeat scroll 0% 0%, radial-gradient(circle, rgba(11,98,94,1) 0%, rgba(75,191,175,1) 100%), rgb(0, 0, 0) center center/cover no-repeat fixed;
 
    --modal-bg-color: #4ABFAF; /* PES Body Color */
    --modal-header-color: #08635E; /* PES Fin Color */
